[gd_scene load_steps=25 format=2]

[ext_resource path="res://game/dungeon/Dungeon.gd" type="Script" id=1]
[ext_resource path="res://game/dungeon/Player.tscn" type="PackedScene" id=2]
[ext_resource path="res://game/recipe-book/RecipeBook.tscn" type="PackedScene" id=3]
[ext_resource path="res://game/shop/Shop.tscn" type="PackedScene" id=4]
[ext_resource path="res://assets/animations/Basic Attack(adjusted).png" type="Texture" id=5]
[ext_resource path="res://assets/animations/Poison (Adjusted).png" type="Texture" id=6]
[ext_resource path="res://assets/animations/Debuff.png" type="Texture" id=7]
[ext_resource path="res://assets/animations/Buff.png" type="Texture" id=8]
[ext_resource path="res://assets/animations/Crushing Attack.png" type="Texture" id=9]
[ext_resource path="res://assets/animations/Pierce Attack.png" type="Texture" id=10]
[ext_resource path="res://assets/animations/Shield Up.png" type="Texture" id=11]
[ext_resource path="res://assets/animations/Summoning.png" type="Texture" id=12]
[ext_resource path="res://assets/animations/Heal.png" type="Texture" id=13]
[ext_resource path="res://assets/animations/Area dmg.png" type="Texture" id=14]

[sub_resource type="Animation" id=1]
resource_name = "Basic Attack Anim"
length = 0.6
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3, 4, 5 ]
}

[sub_resource type="Animation" id=2]
resource_name = "AreadmgAnim"
length = 2.4
tracks/0/type = "value"
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.801, 0.9, 1, 1.1, 1.2, 1.3, 1.4, 1.5, 1.6, 1.7, 1.8, 1.9, 2, 2.1, 2.2, 2.3 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3, 4, 5, 6, 7, 8, 8, 9, 10, 11, 12, 13, 14, 15, 16, 17, 18, 19, 20, 20, 21, 22 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.8, 1.4 ),
"transitions": PoolRealArray( 0, 1, 0 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( 0, -100 ), Vector2( 0, 0 ) ]
}

[sub_resource type="Animation" id=3]
resource_name = "PierceAnim"
length = 1.5
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9, 1, 1.1, 1.2, 1.3, 1.4 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 3, 4, 5, 6, 7, 8, 9, 10, 11, 12, 13, 14, 15, 16, 17 ]
}

[sub_resource type="Animation" id=4]
resource_name = "CrushattackAnim"
length = 0.9
loop = true
step = 0.08
tracks/0/type = "value"
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.08, 0.16, 0.24, 0.32, 0.4, 0.48, 0.56, 0.64, 0.72, 0.8 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 10 ]
}

[sub_resource type="Animation" id=5]
length = 0.9
step = 0.06
tracks/0/type = "value"
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.06, 0.12, 0.18, 0.24, 0.3, 0.36, 0.42, 0.48, 0.54, 0.6, 0.66, 0.72 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12 ]
}

[sub_resource type="Animation" id=6]
resource_name = "HealAnim"
length = 1.8
loop = true
step = 0.08
tracks/0/type = "value"
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.08, 0.16, 0.24, 0.32, 0.4, 0.48, 0.56, 0.64, 0.72, 0.8, 0.88, 0.96, 1.04, 1.12, 1.2, 1.28, 1.36, 1.44, 1.52, 1.6, 1.68 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12, 13, 14, 15, 16, 17, 18, 19, 28, 29 ]
}

[sub_resource type="Animation" id=7]
resource_name = "BuffAnim"
length = 1.5
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9, 1, 1.1, 1.2, 1.3, 1.4 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12, 13, 14 ]
}

[sub_resource type="Animation" id=8]
resource_name = "DebuffAnim"
length = 0.9
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3, 4, 5, 6, 7, 8 ]
}

[sub_resource type="Animation" id=9]
resource_name = "SummonAnim"
length = 1.1
loop = true
step = 0.06
tracks/0/type = "value"
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.06, 0.12, 0.18, 0.24, 0.3, 0.36, 0.42, 0.48, 0.54, 0.6, 0.66, 0.72, 0.78, 0.84, 0.9, 0.96, 1.02 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3, 4, 5, 6, 7, 8, 10, 11, 12, 13, 14, 15, 16, 17, 18 ]
}

[sub_resource type="Animation" id=10]
resource_name = "shieldAnim"
length = 1.6
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9, 1, 1.1, 1.2, 1.3, 1.4, 1.5 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12, 13, 14, 15 ]
}

[node name="Dungeon" type="Node"]
script = ExtResource( 1 )

[node name="Player" parent="." instance=ExtResource( 2 )]

[node name="BookLayer" type="CanvasLayer" parent="."]

[node name="RecipeBook" parent="BookLayer" instance=ExtResource( 3 )]
visible = false

[node name="Shop" parent="." instance=ExtResource( 4 )]
visible = false

[node name="Node2D" type="Node2D" parent="."]

[node name="Basic Attack" type="Sprite" parent="Node2D"]
visible = false
position = Vector2( -10.1682, 0 )
texture = ExtResource( 5 )
vframes = 2
hframes = 5

[node name="AnimationPlayer" type="AnimationPlayer" parent="Node2D/Basic Attack"]
"anims/Basic Attack Anim" = SubResource( 1 )

[node name="Area attack" type="Sprite" parent="Node2D"]
visible = false
scale = Vector2( 1.49701, 1.49701 )
texture = ExtResource( 14 )
vframes = 6
hframes = 5
frame = 22

[node name="AnimationPlayer" type="AnimationPlayer" parent="Node2D/Area attack"]
anims/AreadmgAnim = SubResource( 2 )

[node name="Pierce Attack" type="Sprite" parent="Node2D"]
visible = false
rotation = -3.14159
texture = ExtResource( 10 )
vframes = 4
hframes = 5
frame = 13

[node name="AnimationPlayer" type="AnimationPlayer" parent="Node2D/Pierce Attack"]
anims/PierceAnim = SubResource( 3 )

[node name="Crushing Attack" type="Sprite" parent="Node2D"]
visible = false
texture = ExtResource( 9 )
vframes = 3
hframes = 5

[node name="AnimationPlayer" type="AnimationPlayer" parent="Node2D/Crushing Attack"]
anims/CrushattackAnim = SubResource( 4 )

[node name="Poison" type="Sprite" parent="Node2D"]
visible = false
scale = Vector2( 2.3204, 2.3204 )
texture = ExtResource( 6 )
hframes = 13
frame = 12

[node name="AnimationPlayer" type="AnimationPlayer" parent="Node2D/Poison"]
anims/Poison = SubResource( 5 )

[node name="Heal" type="Sprite" parent="Node2D"]
visible = false
texture = ExtResource( 13 )
vframes = 6
hframes = 5

[node name="AnimationPlayer" type="AnimationPlayer" parent="Node2D/Heal"]
anims/HealAnim = SubResource( 6 )

[node name="Buff" type="Sprite" parent="Node2D"]
visible = false
position = Vector2( -1.16638, 2.3327 )
texture = ExtResource( 8 )
vframes = 4
hframes = 4
frame = 12

[node name="AnimationPlayer" type="AnimationPlayer" parent="Node2D/Buff"]
anims/BuffAnim = SubResource( 7 )

[node name="Debuff" type="Sprite" parent="Node2D"]
visible = false
texture = ExtResource( 7 )
vframes = 2
hframes = 5

[node name="AnimationPlayer" type="AnimationPlayer" parent="Node2D/Debuff"]
anims/DebuffAnim = SubResource( 8 )

[node name="Summon" type="Sprite" parent="Node2D"]
visible = false
texture = ExtResource( 12 )
vframes = 4
hframes = 5
frame = 8

[node name="AnimationPlayer" type="AnimationPlayer" parent="Node2D/Summon"]
anims/SummonAnim = SubResource( 9 )

[node name="Shield" type="Sprite" parent="Node2D"]
visible = false
rotation = 3.14159
texture = ExtResource( 11 )
vframes = 4
hframes = 4

[node name="AnimationPlayer" type="AnimationPlayer" parent="Node2D/Shield"]
anims/shieldAnim = SubResource( 10 )
[connection signal="combination_discovered" from="Player" to="." method="_on_Player_combination_discovered"]
[connection signal="favorite_toggled" from="BookLayer/RecipeBook" to="." method="_on_RecipeBook_favorite_toggled"]
[connection signal="recipe_pressed" from="BookLayer/RecipeBook" to="." method="_on_RecipeBook_recipe_pressed"]
[connection signal="closed" from="Shop" to="." method="_on_Shop_closed"]
[connection signal="combination_bought" from="Shop" to="." method="_on_Shop_combination_bought"]
[connection signal="hint_bought" from="Shop" to="." method="_on_Shop_hint_bought"]
